View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025778 | Community | OCCT:Visualization | public | 2015-02-02 10:13 | 2015-05-14 16:28 |
Reporter | Vico Liang | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025778: Gradient background will cut view if there is ClipPlane defined. | ||||
Description | There is a similar issue at http://www.opencascade.org/org/forum/thread_19388/?forum=3 // Code snippet as following: gp_Pln aPln(myWCS); Handle(Graphic3d_ClipPlane) aClipPlane = new Graphic3d_ClipPlane(aPln); myView->AddClipPlane(aClipPlane); aClipPlane->SetOn(Standard_True); aClipPlane->SetCapping(Standard_True); myContext->UpdateCurrentViewer(); myView->Update(); // and then set the gradient background | ||||
Steps To Reproduce | bugs/vis/bug25778pload MODELING VISUALIZATION vinit View1 vclear vaxo vsetdispmode 1 box b 1 1 1 vsetgradientbg 255 0 0 0 0 255 0 vdisplay b vfit vclipplane create pln vclipplane set pln view Driver1/Viewer1/View1 vclipplane change pln equation 0 1 0 -0.5 vsetgradientbg 255 0 0 0 0 255 1 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug25778 | ||||
|
gradient_cutplane.png (222,190 bytes) |
|
plainbackground_cutplane.png (245,041 bytes) |
|
Branch CR25778 has been created by aba. SHA-1: 5028bdaee7d6c65b077aaa36dba3ea013d95b180 Detailed log of new commits: Author: aba Date: Tue Mar 10 14:11:58 2015 +0300 0025778: Gradient background will cut view if there is ClipPlane defined: OpenGl_CappingAlgo: rendered capping plane with primitive array |
|
Previous commit of Anastasia: "0025778: Gradient background will cut view if there is ClipPlane defined" "OpenGl_CappingAlgo: rendered capping plane with primitive array" related to drawing capping planes with primitives array was integrated as a part of 0023484 |
|
Branch CR25778_2 has been created by apl. SHA-1: c947bc632fd8f1fe539fae728078da2514af4f54 Detailed log of new commits: Author: apl Date: Wed Apr 15 12:27:05 2015 +0300 0025778: Gradient background will cut view if there is ClipPlane defined. |
|
Dear Kirill, Please review CR25778_2. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR25778_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: c947bc632fd8f1fe539fae728078da2514af4f54 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: bugs vis(004) bug25778 - OK http://occt-tests/CR25778-2-master-occt-64/Debian60-64/bugs/vis/bug25778.html http://occt-tests/CR25778-2-master-occt-64/Windows-64-VC10/bugs/vis/bug25778.html Testing on Linux: Total MEMORY difference: 94054609 / 94242212 [-0.20%] Total CPU difference: 51699.0299999994 / 56192.6999999997 [-8.00%] Testing on Windows: Total MEMORY difference: 57132568 / 57127628 [+0.01%] Total CPU difference: 17116.148918198847 / 15976.577213298899 [+7.13%] |
|
Branch CR25778 has been deleted by inv. SHA-1: 5028bdaee7d6c65b077aaa36dba3ea013d95b180 |
|
Branch CR25778_2 has been deleted by inv. SHA-1: c947bc632fd8f1fe539fae728078da2514af4f54 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-02-02 10:13 | Vico Liang | New Issue | |
2015-02-02 10:13 | Vico Liang | Assigned To | => kgv |
2015-02-02 10:13 | Vico Liang | File Added: gradient_cutplane.png | |
2015-02-02 10:14 | Vico Liang | File Added: plainbackground_cutplane.png | |
2015-02-11 13:18 | kgv | Steps to Reproduce Updated | |
2015-02-11 13:20 | kgv | Assigned To | kgv => aba |
2015-02-11 13:20 | kgv | Status | new => assigned |
2015-03-10 14:12 | git | Note Added: 0038224 | |
2015-04-14 18:10 |
|
Assigned To | aba => apl |
2015-04-15 11:09 |
|
Note Added: 0039745 | |
2015-04-15 11:09 |
|
Note Edited: 0039745 | |
2015-04-15 11:10 |
|
Note Edited: 0039745 | |
2015-04-15 12:30 | git | Note Added: 0039767 | |
2015-04-15 14:10 |
|
Note Added: 0039778 | |
2015-04-15 14:10 |
|
Assigned To | apl => kgv |
2015-04-15 14:10 |
|
Status | assigned => resolved |
2015-04-15 14:10 |
|
Steps to Reproduce Updated | |
2015-04-15 14:19 | kgv | Note Added: 0039779 | |
2015-04-15 14:19 | kgv | Assigned To | kgv => bugmaster |
2015-04-15 14:19 | kgv | Status | resolved => reviewed |
2015-04-15 17:21 |
|
Assigned To | bugmaster => apv |
2015-04-16 16:08 |
|
Test case number | => bugs vis(004) bug25778 |
2015-04-16 16:10 |
|
Note Added: 0039898 | |
2015-04-16 16:10 |
|
Assigned To | apv => bugmaster |
2015-04-16 16:10 |
|
Status | reviewed => tested |
2015-04-17 15:40 | bugmaster | Changeset attached | => occt master 699239e4 |
2015-04-17 15:40 | bugmaster | Status | tested => verified |
2015-04-17 15:40 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:28 | git | Note Added: 0040992 | |
2015-05-14 16:28 | git | Note Added: 0040993 |