0025778: Gradient background will cut view if there is ClipPlane defined.